# Yolov5_AndroidStudio_inferencing_with_Camera

proyectoalbatorres/: settings.gradle.kts
proyectoalbatorres/app/: build.gradle.kts
proyectoalbatorres/app/src/androidTest/java/com/example/proyectoalbatorres/: ExampleInstrumentedTest.java
proyectoalbatorres/app/src/main/: AndroidManifest.xml
proyectoalbatorres/app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  native-lib.cpp
proyectoalbatorres/app/src/main/java/com/example/proyectoalbatorres/: FragEfecto.java  FragFiltros.java  FragHistograma.java  FragPixelReemplazo.java  MainActivity.java
proyectoalbatorres/app/src/main/res/layout/: activity_main.xml  efecto.xml  filtros.xml  histograma.xml  pixel_reemplazo.xml  submenu_cabecera.xml
proyectoalbatorres/app/src/main/res/menu/: submenu.xml
proyectoalbatorres/app/src/main/res/values/: strings.xml  themes.xml
proyectoalbatorres/app/src/main/res/values-night/: themes.xml
proyectoalbatorres/app/src/test/java/com/example/proyectoalbatorres/: ExampleUnitTest.java
proyectoalbatorres/gradle/wrapper/: gradle-wrapper.properties
